@@ -67,6 +67,7 @@ export(latitudeLongitudeRoads)
 export(latlongCoordinates)
 export(latlongNeighborhoodData)
 export(latlongOrthoProj)
+export(latlongOrthoProjPumps)
 export(latlongPumps)
 export(latlongSnowMap)
 export(mapFrameSamples)
